--- a/app/src/main/res/layout/activity_story_chooser.xml
+++ b/app/src/main/res/layout/activity_story_chooser.xml
@@ -1,60 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/storyChooserActivity"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:screenOrientation="portrait"
-    style="@style/AppTheme.Activity">
+    android:layout_height="match_parent">
 
-    <!-- Header -->
-    <include layout="@layout/green_header_frame_layout" />
-
-
-
-    <!-- Filters -->
+    <!-- Main layout -->
     <LinearLayout
+        android:id="@+id/storyChooserActivity"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/header_horizontal_padding"
-        android:paddingRight="@dimen/header_horizontal_padding"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:gravity="right">
+        android:layout_height="match_parent"
+        android:screenOrientation="portrait"
+        style="@style/AppTheme.Activity">
 
-        <!-- Select box -->
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <!-- Header -->
+        <include layout="@layout/green_header_frame_layout" />
 
-        </Spinner>
-    </LinearLayout>
 
-    <!-- Recent Stories -->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <ScrollView
+        <!-- Filters -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/header_horizontal_padding"
+            android:paddingRight="@dimen/header_horizontal_padding"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:gravity="right">
+
+            <!-- Select box -->
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+            </Spinner>
+        </LinearLayout>
+
+        <!-- Recent Stories -->
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ListView
-                android:id="@+id/story_chooser_story_list"
+
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+                <ListView
+                    android:id="@+id/story_chooser_story_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-            </ListView>
-        </ScrollView>
+                </ListView>
+            </ScrollView>
 
-        <ImageButton
-            android:id="@+id/story_chooser_add_btn"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="30dp"
-            android:background="@drawable/story_chooser_add_btn"/>
-    </RelativeLayout>
-</LinearLayout>
+            <ImageButton
+                android:id="@+id/story_chooser_add_btn"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="30dp"
+                android:background="@drawable/story_chooser_add_btn"/>
+        </RelativeLayout>
+    </LinearLayout>
+
+    <!-- Loading Layout-->
+    <include layout="@layout/full_opaque_loading_screen"/>
+
+</RelativeLayout>
