StoryChooser now shows story pulled from the database

--- a/app/src/main/res/layout/story_chooser_list_item.xml
+++ b/app/src/main/res/layout/story_chooser_list_item.xml
@@ -7,12 +7,13 @@
 
     <!-- Theme Name -->
     <TextView
+        android:id="@+id/chooser_theme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:fontFamily="sans-serif-medium"
-        android:text="TEST"/>
+        android:text="TEST" />
 
     <!-- Content -->
     <LinearLayout
