--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -94,7 +94,6 @@
 
     <!-- Action Zone Section -->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/asdjkalsdkajsd"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -102,17 +101,20 @@
         android:layout_gravity="center"
         android:gravity="center">
 
-        <Button
-            android:id="@+id/testing_story_chooser_btn"
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:text="Go to StoryChooser"/>
+            android:textColor="@color/primary"
+            android:textSize="24sp"
+            android:fontFamily="sans-serif-thin"
+            android:textAlignment="center"
+            android:layout_marginBottom="10dp"
+            android:text="@string/home_available_story"/>
 
         <ImageButton
             android:id="@+id/playBtn"
             android:layout_width="@dimen/play_btn_size"
             android:layout_height="@dimen/play_btn_size" />
-
     </LinearLayout>
 
 
