--- a/app/src/main/res/layout/green_header_frame_layout.xml
+++ b/app/src/main/res/layout/green_header_frame_layout.xml
@@ -19,9 +19,9 @@
                 android:background="@drawable/white_back_arrow"/>
         </LinearLayout>
         <TextView
+            android:id="@+id/app_header_title"
             style="@style/AppTheme.Activity.Header.Title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/story_chooser_header_title" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </FrameLayout>
