--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -47,4 +47,15 @@
       -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+
+    <!--
+    ~~ Activity Read
+    -->
+    <dimen name="activity_read_margin_horizontal">30dp</dimen>
+    <dimen name="activity_read_margin_top">10dp</dimen>
+    <dimen name="activity_read_title_size">17sp</dimen>
+    <dimen name="activity_read_scrollview_magin_top">20dp</dimen>
+    <dimen name="activity_read_storie_size">17sp</dimen>
+
 </resources>
