--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,11 +35,6 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center">
-            <WebView
-                android:id="@+id/webview_logo"
-                android:layout_width="2dp"
-                android:layout_height="2dp"
-                android:layout_gravity="center_vertical" />
 
             <android.support.v7.widget.CardView
                 android:layout_width="@dimen/home_header_profile_image_size"
@@ -59,6 +54,7 @@
             </android.support.v7.widget.CardView>
 
             <TextView
+                android:id="@+id/profile_name_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
@@ -138,7 +134,7 @@
                 android:layout_marginBottom="10dp"
                 android:text="@string/home_available_story"/>
             <ImageButton
-                android:id="@+id/playBtn"
+                android:id="@+id/home_play_btn"
                 android:layout_width="@dimen/play_btn_size"
                 android:layout_height="@dimen/play_btn_size" />
         </LinearLayout>
