string into xml - fixing layout recommendation - set adapter as private class of mainallstoriesfragment

--- a/app/src/main/res/layout/activity_read_story.xml
+++ b/app/src/main/res/layout/activity_read_story.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical"
@@ -57,8 +57,7 @@
             <TextView
                 android:id="@+id/story"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="HERE GOES THE STORY "
+                android:layout_height="wrap_content"
                 android:textSize="@dimen/activity_read_storie_size" />
         </ScrollView>
     </LinearLayout>
