--- a/app/src/main/res/layout/green_header_frame_layout.xml
+++ b/app/src/main/res/layout/green_header_frame_layout.xml
@@ -11,12 +11,13 @@
             android:layout_height="wrap_content"
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
-            android:paddingLeft="30dp">
+            android:paddingStart="30dp">
 
             <ImageView
                 android:id="@+id/header_back_arrow"
                 style="@style/AppTheme.Activity.Header.BackBtn"
-                android:background="@drawable/white_back_arrow"/>
+                android:background="@drawable/white_back_arrow"
+                android:contentDescription="@string/header_back_button" />
         </LinearLayout>
         <TextView
             android:id="@+id/header_title"
