--- a/app/src/main/res/layout/full_opaque_loading_screen.xml
+++ b/app/src/main/res/layout/full_opaque_loading_screen.xml
@@ -9,6 +9,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Loading"/>
+        android:text="@string/loading_loading"/>
 
 </LinearLayout>
