--- a/app/src/main/res/layout/green_header_frame_layout.xml
+++ b/app/src/main/res/layout/green_header_frame_layout.xml
@@ -12,8 +12,7 @@
             android:layout_height="wrap_content"
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
-            android:paddingStart="30dp"
-            android:id="@+id/header_back_arrow">
+            android:paddingStart="30dp">
 
             <ImageView
                 style="@style/AppTheme.Activity.Header.BackBtn"
